--- a/registrese1.html
+++ b/registrese1.html
@@ -33,16 +33,20 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="./index.html">Incio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Acerca de</a>
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html#eventos">Eventos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Eventos</a>
+            <a class="nav-link" href="./contacto.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#">Registrese</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./conexion-api.html">Conexión API</a>
           </li>
         </ul>
       </div>
@@ -85,7 +89,8 @@
                     <label class="form-label" for="form3Example1q"></label>
                   </div>
                   <div data-mdb-input-init class="form-outline mb-6">
-                    <input type="password" id="form3Example1q" class="form-control" placeholder="Confirmar Contraseña" />
+                    <input type="password" id="form3Example1q" class="form-control"
+                      placeholder="Confirmar Contraseña" />
                     <label class="form-label" for="form3Example1q"></label>
                   </div>
 
@@ -108,10 +113,18 @@
       <div class="row">
         <div class="col-md-12 text-center">
           <ul class="list-inline">
-            <li class="list-inline-item"><a href="https://facebook.com/" target="_blank">Facebook</a></li>
-            <li class="list-inline-item"><a href="https://twitter.com/" target="_blank">Twitter</a></li>
-            <li class="list-inline-item"><a href="https://instagram.com/" target="_blank">Instagram</a></li>
-            <li class="list-inline-item"><a href="https://youtube.com/" target="_blank">YouTube</a></li>
+            <li class="list-inline-item">
+              <a href="https://facebook.com/" target="_blank" rel="noopener">Facebook</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://instagram.com/" target="_blank" rel="noopener">Instagram</a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://youtube.com/" target="_blank" rel="noopener">YouTube</a>
+            </li>
           </ul>
           <p class="derechos">Derechos reservados &copy; 2024 RockPass</p>
         </div>
