Ajustes de presentacion Grilla Api

--- a/conexion-api.html
+++ b/conexion-api.html
@@ -62,7 +62,8 @@
             <div id="divError" class="col-6"></div>
             <div class="row mt-5">
                 <div class="col-3">
-                    <button class="btn btn-success" onclick="findUsers()">
+                    <!-- <button class="btn btn-success" onclick="findUsers()"> -->
+                    <button class="btn btn-detalle w-100 py-2" onclick="findUsers()">
                         Buscar Usuarios
                     </button>
                 </div>
